Add ajax purchase modify and delete functions

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -189,9 +189,6 @@
                                 </li>
                                 <li class="{{ tab_menu_profile }}"><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a>
                                 </li>
-                                <li class="{{ tab_menu_histo }}"><a href="/purchasehistory"><i
-                                                class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a>
-                                </li>
                                 <li class="{{ tab_menu_source }}"><a href="javascript:void(0);" class="has-arrow"><i
                                                 class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
                                     <ul>
@@ -216,8 +213,11 @@
                                     <li class="{{ tab_admin_admins }}"><a href="/userList/admins"><i
                                                     class="icon-diamond"></i>{{ 'sidebar.admin.admins'|trans }}</a></li>
                                     <li class="{{ tab_admin_products }}"><a href="/product"><i
-                                                    class="icon-basket-loaded"></i>{{ 'sidebar.admin.products'|trans }}
+                                                    class="icon-info"></i>{{ 'sidebar.admin.products'|trans }}
                                         </a></li>
+                                    <li class="{{ tab_admin_histo }}"><a href="/purchasehistory"><i
+                                                    class="icon-basket-loaded"></i>{{ 'sidebar.admin.buy_histo'|trans }}</a>
+                                    </li>
                                     {#<li>
                                         <a href="javascript:void(0);" class="has-arrow"><i class="icon-list"></i><span>Projects</span></a>
                                         <ul>
