--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -192,14 +192,8 @@
                                 <li class="{{ tab_menu_histo }}"><a href="/purchasehistory"><i
                                                 class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a>
                                 </li>
-                                <li class="{{ tab_menu_source }}"><a href="javascript:void(0);" class="has-arrow"><i
+                                <li class="{{ tab_menu_source }}"><a href="/tracking/data" class="has-arrow"><i
                                                 class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
-                                    <ul>
-                                        <li><a href="javascript:void(0);">All Employees</a></li>
-                                        <li><a href="javascript:void(0);">Leave Requests</a></li>
-                                        <li><a href="javascript:void(0);">Attendance</a></li>
-                                        <li><a href="javascript:void(0);">Departments</a></li>
-                                    </ul>
                                 </li>
                             </ul>
                         </nav>
