--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -189,7 +189,7 @@
                                 </li>
                                 <li class="{{ tab_menu_profile }}"><a href="/profile"><i class="icon-user"></i>{{ 'sidebar.menu.profile'|trans }}</a>
                                 </li>
-                                <li class="{{ tab_menu_histo }}"><a href="/purchasehistory"><i class="icon-basket-loaded"></i>{{ 'sidebar.menu.buy_histo'|trans }}</a>
+                                <li class="{{ tab_menu_histo }}"><a href="/purchasehistory"><i class="icon-basket-loaded"></i>{{ 'sidebar.admin.buy_histo'|trans }}</a>
                                 </li>
                                 <li class="{{ tab_menu_source }}"><a href="/tracking/data" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
                                 </li>
