--- a/templates/user/userList_users.html.twig
+++ b/templates/user/userList_users.html.twig
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
           href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('vendor/chartist/css/chartist.css') }}">
 {% endblock %}
 
 {% block sidebar %}
@@ -141,6 +142,10 @@
                     </div>
                 </div>
             </div>
+            <div class="card">
+                <div class="header"><h2>{{ 'userList_pages.user_number_chart'|trans }}</h2></div>
+                <div class="ct-chart ct-perfect-fourth"></div>
+            </div>
         </div>
     </div>
 {% endblock %}
@@ -155,6 +160,7 @@
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
     <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
     <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
+    <script src="{{ asset('vendor/chartist/js/chartist.js') }}"></script>
     <script>
         $(document).ready(function () {
             $('.delete_user_confirm').click(function (e) {
@@ -176,6 +182,15 @@
                     window.location.href = linkURL;
                 });
             };
-        })
+        });
+        var data = {
+            labels: [],
+            series: [[]]
+        };
+        {% for month, count in month_count %}
+            data['labels'].push("2007-"+{{ month }});
+            data['series'][0].push({{ count }});
+        {% endfor %}
+        new Chartist.Line('.ct-chart', data);
     </script>
 {% endblock %}
