--- a/assets/scss/customer/_customer.scss
+++ b/assets/scss/customer/_customer.scss
@@ -15,6 +15,11 @@
     min-width: 95px;
 
     a {
+      color: $color-warning;
+
+
+    }
+    .btn {
       color: $col-white !important;
     }
   }
