--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
 {% endblock %}
 {% block sidebar %}
-    {% set tab_menu_index, tab_menu_profile, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, tab_admin_histo, nav_menu, nav_admin = "", "", "", "", "", "", "", "active", "", "active" %}
+    {% if role == 'Admin' or role == 'Seller' %}
+        {% set tab_menu_index, tab_menu_profile, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, tab_admin_histo, nav_menu, nav_admin = "", "", "", "", "", "", "", "active", "", "active" %}
+    {% endif %}
+    {% if role == 'User' %}
+        {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, tab_admin_histo, nav_menu, nav_admin = "", "", "active", "", "", "", "", "", "", "active", "" %}
+    {% endif %}
     {{ parent() }}
 {% endblock %}
 {% block main_content %}
