--- a/templates/tracking/show.html.twig
+++ b/templates/tracking/show.html.twig
@@ -15,7 +15,7 @@
     {{ parent() }}
 {% endblock %}
 {% block main_content %}
-<div id="overlay"></div>
+    <div id="overlay"></div>
     <div id="popupBox">
         <div id="popupContent">
             <div class="header">
@@ -155,86 +155,14 @@
                     </div>
                 </div>
             </div>
-             <div class="row clearfix">
+            <div class="row clearfix">
                 <div class="col-lg-12">
                     <div class="card">
-                        <div class="body">
-                            <div class="timeline-item animated fadeIn faster green">
-                                <span class="date">{{ tracking.StartingTime|date('Y年m月d日h:m:s') }}</span>
-                                    <span class="date" align="right">
-                                        <a href="javascript:void(0)" id="addRow" class="btn btn-primary m-b-15">
-                                            <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.add_row'|trans }}
-                                         </a>
-                                    </span>
-                                <h5> {{ tracking_product }}{{ tracking_images.StartMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.StartImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower warning">
-                                <span class="date">{{ tracking.MilkCollectionTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.RanchMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.RanchImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower blue">
-                                <span class="date">{{ tracking.FactoryProcessingTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.FactoryMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.FactoryImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower green">
-                                <span class="date">{{ tracking.FactoryDeliveryTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.FactoryDeliveryMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.FactoryDeliveryImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower warning">
-                                <span class="date">{{ tracking.ExportTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.ExportMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.ExportImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower blue">
-                                <span class="date">{{ tracking.ImportTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.ImportMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.ImportImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower green">
-                                <span class="date">{{ tracking.CenterArrivalTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.CenterMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.CenterImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower warning">
-                                <span class="date">{{ tracking.Site1DeliveryTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.Site1Message}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.Site1ImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower blue">
-                                <span class="date">{{ tracking.Site2DeliveryTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.Site2Message}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.Site2ImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower green">
-                                <span class="date">{{ tracking.Site3DeliveryTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.Site3Message}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.Site3ImagePath)}}" height="300" width="300"/>
-                            </div>
-
-                            <div class="timeline-item animated fadeIn slower warning">
-                                <span class="date">{{ tracking.PurchaseTime|date('Y年m月d日h:m:s') }}</span>
-                                <h5> {{ tracking_product }}{{ tracking_images.ClientMessage}}</h5>
-                                <img src="{{ asset('/uploads/images/trackings/' ~ tracking_images.ClientImagePath)}}" height="300" width="300"/>
-                            </div>
-
-
-                        </div>
+                        {% include 'tracking/tracking_block.html.twig' %}
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 {% endblock %}
 {% block javascripts %}
